--- a/src/App.fsproj
+++ b/src/App.fsproj
@@ -7,6 +7,7 @@
     <Compile Include="Extensions.fs" />
     <Compile Include="Model.fs" />
     <Compile Include="JsonHandle.fs" />
+    <Compile Include="Update.fs" />
     <Compile Include="View.fs" />
     <Compile Include="App.fs" />
   </ItemGroup>
