--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "webpack"
   },
   "dependencies": {
+    "date-fns": "^2.15.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
